site/_styles/custom.css
/* Custom variable definition
------------------------------------------------------------------------------------------------ */ 

/* NB note that some of these variables are duplicated by configurations above. */
html {
    /* header height will impact the top offset for many sections
    article header is 66% of Header by default,
    note 1rem = 16px by default */

    /* height of navigation bar */
    --pst-header-height: 5.6rem;
    /* space between nav bar and start of article */
    --pst-header-article-height: 3rem;

    /* prefer Segoe UI which is a windows system font and used for Leftfield logo */
    --pst-font-family-base: "Segoe UI", arial, sans-serif, -apple-system, BlinkMacSystemFont, "avenir next", avenir, "helvetica neue", helvetica, Cantarell, Ubuntu, roboto, noto;
    --pst-font-family-monospace: "SFMono-Regular", Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
    --pst-font-size-base: 0.9rem;

    --pst-font-size-h1: 2.5rem;
    --pst-font-size-h2: 2rem;

    /* --pst-sidebar-font-size: 0.9rem; */
    --pst-sidebar-font-size-mobile: 1.1rem;
    --pst-sidebar-header-font-size: 1.2rem;

    /* --pst-font-size-icon: 1.5rem; */

    font-size: 0.9rem;
    font-size: var(--pst-font-size-base);
}

/* Fonts 
-------------------------------------------------------------------------------------------------*/
code,
kbd,
pre,
samp {
    font-family: "SFMono-Regular", Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
    font-family: var(--pst-font-family-monospace);
}

body {
    font-family: "Segoe UI", arial, sans-serif, -apple-system, BlinkMacSystemFont, "avenir next", avenir, "helvetica neue", helvetica, Cantarell, Ubuntu, roboto, noto;
    font-family: var(--pst-font-family-base);
}

h1 {
    font-size: 2.5rem;
    font-size: var(--pst-font-size-h1);
}

h2 {
    font-size: 2rem;
    font-size: var(--pst-font-size-h2);
}

.bd-footer {
    font-size: 0.8rem;
}

.bd-header {
    font-size: 1.5rem;
}

.bd-sidebar-primary {
    font-size: 1.1rem;
    font-size: var(--pst-sidebar-font-size-mobile);
}

.bd-sidebar-primary .sidebar-header-items .sidebar-header-items__title {
    font-size: 1.2rem;
    font-size: var(--pst-sidebar-header-font-size);
}

/* class for optional rst centering of h1 and h2 headings */
.center-heading h1,
.center-heading h2 {
    text-align: center;
}

/* .navbar-icon-links i.fa-brands,
.navbar-icon-links i.fa-regular,
.navbar-icon-links i.fa-solid {
  font-size: 1.5rem;
  font-size: var(--pst-font-size-icon);
}

.theme-switch-button {
    font-size: 1.4rem;
    font-size: calc(var(--pst-font-size-icon) - 0.1rem);
} */
  
/* Other work arounds
------------------------------------------------------------------------------------------------ */ 

/* remove skip to main content link */
.skip-link {
    display: none;
}

/* turn off header and sidebar link underlines */
.navbar-nav li a.nav-link:hover {
    text-decoration: none
}

/* for no @media support. */
.bd-header-announcement {
    padding: .5rem 2%;
}

/* force firefox versions ~20-28 to use `border-box: border` so that element padding doesn't
overflow the viewport width */
.bd-header-announcement, 
.bd-header__inner,
.bd-footer__inner {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

